Fix nav spacing

--- a/src/scss/lr7-bootstrap-theme/_variables.scss
+++ b/src/scss/lr7-bootstrap-theme/_variables.scss
@@ -445,8 +445,6 @@ $nav-link-color: $brand-default;
 $nav-link-hover-bg:                               transparent;
 $nav-link-hover-color: $brand-primary;
 
-$nav-link-padding:                          10px 30px !default;
-
 $nav-disabled-link-color:                         #C5CDD0;
 $nav-disabled-link-hover-color:                   #C5CDD0;
 
